# emissions_agent

./: OVERVIEW.md  README.md  README_SETUP.md  pyproject.toml
outputs/: question_1_report.md  question_2_report.md  question_3_report.md  question_4_report.md  question_5_report.md  question_6_report.md  question_reports_index.md
src/emissions_agent/: crew.py  main.py
src/emissions_agent/config/: agents.yaml  tasks.yaml
src/emissions_agent/tools/: __init__.py  data_tools.py  reporting_tools.py  tool_registry.py  vector_manager.py  vector_tools.py
